tests/assess-scan-test-scaffold/compile_error/src/lib.rs
// Copyright Kani Contributors
// SPDX-License-Identifier: Apache-2.0 OR MIT

/// Function with a compilation error
pub fn with_error(left: usize, right: u32) -> usize {
    left + right
}
